--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(download_jhu_csse_covid19_data)
 export(download_merged_data)
 export(download_wbank_data)
 export(plot_covid19_spread)
+export(shiny_covid19_spread)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
 importFrom(rlang,.data)
