--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(download_acaps_npi_data)
 export(download_google_trends_data)
 export(download_jhu_csse_covid19_data)
 export(download_merged_data)
+export(download_oxford_npi_data)
 export(download_wbank_data)
 export(plot_covid19_spread)
 export(shiny_covid19_spread)
