--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ License: MIT + file LICENSE
 Imports: 
     xml2, rvest, readxl, magrittr, dplyr, tidyr, countrycode, ggplot2, wbstats,
     gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate,
-    shiny, shinyWidgets, rclipboard, stringr, zoo
+    shiny, shinyWidgets, shinyjs, rclipboard, stringr, zoo
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
