Added code to download/scrape Google CMR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export("%>%")
 export(download_acaps_npi_data)
+export(download_google_cmr_pdfs)
 export(download_google_trends_data)
 export(download_jhu_csse_covid19_data)
 export(download_merged_data)
 export(download_oxford_npi_data)
 export(download_wbank_data)
 export(plot_covid19_spread)
+export(scrape_google_cmr_data)
 export(shiny_covid19_spread)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
