--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,18 +6,17 @@ Authors@R: person("Joachim", "Gassen", role = c("aut", "cre"),
     email = "gassen@wiwi.hu-berlin.de",
     comment = c(ORCID = "0000-0003-4364-2911"))
 Description: This package facilitates the download of current Covid-19 related 
-    country-level virus spread data from the Johns Hopkins University CSSE team, 
-    the Government measures dataset provided by the Assessment Capacities 
-    Project (ACAPS), Google Trends data on the search volume for the term 
-    "coronavirus" and additional country-level data provided by the World Bank. 
-    These data can be downloaded separately or in one merged data frame. 
-    In addition, the package features a function to visualize the country-level 
-    spread of Covid-19. 
+    data from various sources, including the Johns Hopkins University CSSE 
+    team, the Assessment Capacities Project (ACAPS), Google Trends and movement 
+    data, Government measures provided by University of Oxford and additional 
+    country-level data provided by the World Bank. These data can be downloaded 
+    separately or in one merged data frame. In addition, the package features a 
+    function and shiny app to visualize the country-level spread of Covid-19. 
 License: MIT + file LICENSE
 Imports: 
     xml2, rvest, readxl, magrittr, dplyr, tidyr, countrycode, ggplot2, wbstats,
     gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate,
-    shiny, shinyWidgets, shinyjs, rclipboard, stringr, zoo
+    shiny, shinyWidgets, shinyjs, rclipboard, stringr, zoo, pdftools
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
