--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -24,6 +24,7 @@ reference:
   - download_jhu_csse_covid19_data
   - download_acaps_npi_data
   - download_oxford_npi_data
+  - download_apple_mtr_data
   - download_google_cmr_pdfs
   - scrape_google_cmr_data
   - download_google_trends_data
