New visualization: Covid-19 Stripes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(download_merged_data)
 export(download_oxford_npi_data)
 export(download_wbank_data)
 export(plot_covid19_spread)
+export(plot_covid19_stripes)
 export(shiny_covid19_spread)
 importFrom(magrittr,"%>%")
 importFrom(rlang,":=")
