--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(download_jhu_csse_covid19_data)
 export(download_merged_data)
 export(download_oxford_npi_data)
 export(download_wbank_data)
+export(map_covid19)
 export(plot_covid19_spread)
 export(plot_covid19_stripes)
 export(shiny_covid19_spread)
