Some small edits to make CMD check on R 4.0.0 happy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,10 @@ export(map_covid19)
 export(plot_covid19_spread)
 export(plot_covid19_stripes)
 export(shiny_covid19_spread)
+importFrom(ggrepel,geom_text_repel)
 importFrom(magrittr,"%>%")
+importFrom(rclipboard,rclipboardSetup)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
+importFrom(shinyWidgets,addSpinner)
+importFrom(shinyjs,useShinyjs)
