--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -22,6 +22,8 @@ reference:
   desc: Functions to download and tidy Covid-19 related data from authorative sources
   contents:
   - download_jhu_csse_covid19_data
+  - download_ecdc_covid19_data
+  - download_owid_testing_data
   - download_acaps_npi_data
   - download_oxford_npi_data
   - download_apple_mtr_data
