--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,8 @@ Depends: R (>= 2.10)
 License: MIT + file LICENSE
 Imports: 
     xml2, rvest, readxl, magrittr, dplyr, tidyr, countrycode, ggplot2, wbstats,
-    gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate,
-    shiny, shinyWidgets, shinyjs, rclipboard, stringr, zoo, gganimate, maps
+    gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate, shiny, 
+    shinyWidgets, shinyjs, rclipboard, stringr, zoo, gganimate, transformr
 Remote: nset-ornl/wbstats
 Encoding: UTF-8
 LazyData: true
