--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(download_google_cmr_data)
 export(download_google_trends_data)
 export(download_jhu_csse_covid19_data)
 export(download_merged_data)
-export(download_owid_testing_data)
+export(download_owid_data)
 export(download_oxford_npi_data)
 export(download_wbank_data)
 export(map_covid19)
