--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ License: MIT + file LICENSE
 Imports: 
     xml2, rvest, readxl, magrittr, dplyr, tidyr, countrycode, ggplot2, wbstats,
     gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate, shiny, 
-    shinyWidgets, shinyjs, rclipboard, stringr, zoo, gganimate, transformr
+    shinyWidgets, shinyjs, rclipboard, stringr, zoo, gganimate, transformr,
+    maps
 Remote: nset-ornl/wbstats
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
