--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Imports:
     xml2, rvest, readxl, magrittr, dplyr, tidyr, countrycode, ggplot2, wbstats,
     gghighlight, gtrendsR, ggrepel, readr, rlang, scales, lubridate, shiny, 
     shinyWidgets, shinyjs, rclipboard, stringr, zoo, gganimate, transformr,
-    maps
+    maps, methods
 Remote: nset-ornl/wbstats
 Encoding: UTF-8
 LazyData: true
