--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -23,7 +23,7 @@ reference:
   contents:
   - download_jhu_csse_covid19_data
   - download_ecdc_covid19_data
-  - download_owid_testing_data
+  - download_owid_data
   - download_acaps_npi_data
   - download_oxford_npi_data
   - download_apple_mtr_data
